--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install conda packages
         shell: bash -l {0}
-        run: conda install -c conda-forge pandas pytest flake8
+        run: conda install -c conda-forge pandas pytest flake8 pytest-cov
 
       - name: Install matchlock
         shell: bash -l {0}
