--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: matchlock CI
+name: qupid CI
 
 on:
   pull_request:
@@ -24,14 +24,14 @@ jobs:
 
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: matchlock
+          activate-environment: qupid
           python-version: ${{ matrix.python-version }}
 
       - name: Install conda packages
         shell: bash -l {0}
         run: conda install -c conda-forge pandas pytest flake8 pytest-cov
 
-      - name: Install matchlock
+      - name: Install qupid
         shell: bash -l {0}
         run: pip install -e .[dev]
 
