--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install conda packages
         shell: bash -l {0}
-        run: conda install -c conda-forge pandas pytest flake8 pytest-cov scipy scikit-bio networkx joblib biom-format
+        run: conda install -c conda-forge pandas pytest flake8 pytest-cov scipy scikit-bio networkx joblib h5py==3.1.0
 
       - name: Install qupid
         shell: bash -l {0}
