--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,15 @@ name: Main CI
 
 on:
   pull_request:
+    paths-ignore:
+      - "README.md"
+      - "imgs/**"
     branches:
       - main
   push:
+    paths-ignore:
+      - "README.md"
+      - "imgs/**"
     branches:
       - main
 
@@ -37,8 +43,8 @@ jobs:
 
       - name: Check style
         shell: bash -l {0}
-        run: make stylecheck
+        run: make standalone_stylecheck
 
       - name: Run tests
         shell: bash -l {0}
-        run: make test
+        run: make standalone_test
